Fixed horizontal scrollbar

--- a/public/stylesheets/footer/footerView.less
+++ b/public/stylesheets/footer/footerView.less
@@ -5,6 +5,7 @@
   font-size: @font-size-footer;
   line-height: @line-height-footer;
   padding: 0 @padding-normal;
+  width: calc(~"100% - " @padding-normal*2);
 
   ul {
     list-style: none;
